--- a/springBoard/src/main/resources/application.properties
+++ b/springBoard/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port=3000
+
+spring.datasource.url=jdbc:h2:./data/board
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
