--- a/springBoard/src/main/resources/application.properties
+++ b/springBoard/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
+
+#---
+spring.config.activate.on-profile=test
+spring.datasource.url=jdbc:h2:mem:test
